Fix CTA display on mobile when logged in
Same as 18525a06d75ed12efad141e38b173472b89abd6b for CTA

--- a/assets/styles/modules/paragraphs.scss
+++ b/assets/styles/modules/paragraphs.scss
@@ -377,6 +377,10 @@
 
   @media (max-width: #{$screen-tablet}) {
     background-image: none !important;
+
+    .contextual-region {
+      position: unset;
+    }
   }
 
   @media (min-width: #{$screen-tablet}) {
